--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,8 @@
 
 </head>
 <body>
+<!--HEADER START-->
+
   <header class="site-header">
   <div class="container site-header-container">
     <a href="/" class="site-logo">
@@ -18,11 +20,11 @@
 
     <nav class="site-nav">
       <ul class="site-nav-list">
-        <li class="site-nav-item"><a href="/" class="site-nav-link active">bosh sahifa</a>
+        <li class="site-nav-item"><a href="/" class="site-nav-link active">BOSH SAHIFA</a>
         </li>
-          <li class="site-nav-item"><a href="/">Kitoblar</a>
-        </li>  <li class="site-nav-item"><a href="/">Aksiyalar</a>
-        </li>  <li class="site-nav-item"><a href="/" class="site-nav-link">Kontaktlar</a>
+          <li class="site-nav-item"><a href="/">KITOBLAR</a>
+        </li>  <li class="site-nav-item"><a href="/">AKSIYALAR</a>
+        </li>  <li class="site-nav-item"><a href="/" class="site-nav-link">KONTAKTLAR</a>
         </li>
       </ul>
 
@@ -30,5 +32,26 @@
 <button class="btn">Ro'yxatdan o'tish</button>
   </div>
   </header>
+  <!--HEADER END-->
+
+
+  <!--MATN START-->
+  <main class="main-contend">
+    <div class="hero">
+      <div class="container hero-container">
+        <div class="hero-info">
+          <span class="hero-line"></span>
+          <h1 class="hero-title">Pytonda dasturlash asoslari</h1>
+          <p class="hero-text">Dasturlash asoslariga oid o‘zbek tilidagi ilk eng mukammal qo‘llanma. Kitobning har bir bo‘limi uchun maxsus video darslar yozilgan bo‘lib, ularga kitobda ko‘rsatilgan QR kod orqali o‘tish mumkin.</p>
+          <button class="btn">Buyurtmani berish</button>
+        </div>
+        <div class="hero-img">
+          <img src="images/hero/python-book.jpg" alt="python-book" width="510" height="510" title="python-book">
+        </div>
+      </div>
+    </div>
+  </main>
+  <!--MATN END-->
+
 </body>
 </html>
