--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,8 @@
 
   <!--MATN START-->
   <main class="main-contend">
-    <div class="hero">
+    <!-- HERO START -->
+    <section class="hero">
       <div class="container hero-container">
         <div class="hero-info">
           <span class="hero-line"></span>
@@ -49,7 +50,46 @@
           <img src="images/hero/python-book.jpg" alt="python-book" width="510" height="510" title="python-book">
         </div>
       </div>
+    </section>
+    <!-- HERO END -->
+
+    <!-- FEATURES START -->
+     <section class="features">
+      <div class="container">
+        <span class="hero-line"></span>
+        <h2 class="features-title">Nega aynan
+Akademnashr?</h2>
+<ul class="features-list">
+  <li class="features-item">
+    <div class="features-img-wrapper">
+      <img src="images/hero/oson-buyurtma.svg" alt="Oson buyurtma qilish" width="56" height="56">
     </div>
+    <h3 class="features-item-title">Oson buyurtma qilish</h3>
+    <p class="features-item-text">Akademnashr.uz saytidan o’zingizga yoqqan kitobni sodda usulda buyurtma qila olasiz.</p>
+  </li>
+
+
+   <li class="features-item">
+    <div class="features-img-wrapper">
+      <img src="images/hero/star.svg" alt="Eng sara kitoblar" width="56" height="56">
+    </div>
+    <h3 class="features-item-title">Eng sara kitoblar</h3>
+    <p class="features-item-text">Trenddagi eng ommabop, turli auditoriyalarga mo’ljallangan har xil janrdagi kitoblarni topa olasiz.</p>
+  </li>
+
+    <li class="features-item">
+    <div class="features-img-wrapper">
+      <img src="images/hero/star.svg" alt="Tez yetkazib berish" width="56" height="56">
+    </div>
+    <h3 class="features-item-title">Tez yetkazib berish</h3>
+    <p class="features-item-text">O’zbekistonning ixtiyoriy hududiga 3 ish kuni ichida, xalqaro buyurtmalarni 10 ish kuni ichida yetkazib beriladi.</p>
+  </li>
+</ul>
+
+
+      </div>
+     </section>
+     <!-- FEATURES END -->
   </main>
   <!--MATN END-->
 
